Fixed the project types to be android and ios Fixed the default class names for the colors and styles to start in upper case.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "zeplin": {
     "displayName": "flutter_extension",
     "projectTypes": [
-      "web"
+      "android",
+      "ios"
     ],
     "options": [
       {
