Added an option Handling Screens (with a warning its expensive). Removed a bunch of debug logging. Fixed an issue where some values had .0 appended when it already had decimal point.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,12 @@
         "default": ""
       },
       {
+        "name": "Handle Screens?  Warning, this can be very cpu intensive",
+        "type": "switch",
+        "id": "handleScreens",
+        "default": false
+      },
+      {
         "name": "Display resources from linked and parent styleguides",
         "type": "switch",
         "id": "useLinkedStyleguides",
