--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flutter_extension",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Generates Flutter classes from colors, text styles and layers code",
   "scripts": {
     "start": "zem start",
@@ -13,10 +13,10 @@
   },
   "devDependencies": {
     "@zeplin/eslint-config": "^1.2.2",
-    "@zeplin/extension-model": "^2.3.0",
-    "eslint": "^6.0.1",
-    "jest": "^24.8.0",
-    "zem": "^0.4.3"
+    "@zeplin/extension-model": "^2.4.0",
+    "eslint": "^6.6.0",
+    "jest": "^24.9.0",
+    "zem": "^1.0.3"
   },
   "author": {
     "name": "AgoraNet",
@@ -47,11 +47,14 @@
         "default": false
       },
       {
-        "name": "Display resources from linked and parent styleguides",
+        "name": "Generates Flutter code for many aspects for your design",
         "type": "switch",
         "id": "useLinkedStyleguides",
         "default": true
       }
     ]
+  },
+  "dependencies": {
+    "to-hex": "0.0.4"
   }
 }
